<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/action_dialog_chat_take_photo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView04"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_camera" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_take_picture"
            android:textColor="@color/no11"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_dialog_chat_pick_photo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_upload" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_pick_picture"
            android:textColor="@color/no11"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_dialog_chat_record"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_voice" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_record"
            android:textColor="@color/no11"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_dialog_chat_voice_chat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_voicecall" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_voice_chat"
            android:textColor="@color/no11"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_dialog_chat_video_chat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_call" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_video_chat"
            android:textColor="@color/no11"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>