<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/action_dialog_topic_edit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView04"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_edit" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_topic_edit"
            android:textColor="@color/no11"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_dialog_topic_invite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_add" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_topic_invite"
            android:textColor="@color/no11"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_dialog_topic_leave"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/dialog_exit" />

        <TextView
            android:id="@+id/action_dialog_topic_leave_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_topic_leave"
            android:textColor="@color/no11"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>